install docker and database

--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "build": "vite build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "db:schools": "npm run db:schools:download && npm run db:schools:import",
+    "db:schools:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
+    "db:schools:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
+    "db:fylker": "npm run db:fylker:download && npm run db:fylker:import",
+    "db:fylker:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Administrative_enheter/Fylker/2023/Administrative_enheter_Fylker_2023_PostGIS.zip",
+    "db:fylker:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Administrative_enheter_Fylker_2023_PostGIS.sql",
+    "db:municipalities": "npm run db:municipalities:download && npm run db:municipalities:import",
+    "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Kommuner/POSTGIS/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.zip",
+    "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
+    "db:municipalities:heroku": "npm run db:municipalities:download && psql  < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql,"
   },
   "repository": {
     "type": "git",
@@ -24,6 +34,7 @@
   "devDependencies": {
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "download-cli": "^1.1.1",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2",
