--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
-    "build": "vite build",
     "prepare": "husky",
+    "build": "vite build",
+    "postinstall": "cd server && npm install",
+    "db:setup": "docker compose up --detach && npm run db:schools",
     "db:schools": "npm run db:schools:download && npm run db:schools:import",
     "db:schools:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
     "db:schools:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
-    "db:fylker": "npm run db:fylker:download && npm run db:fylker:import",
-    "db:fylker:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Administrative_enheter/Fylker/2023/Administrative_enheter_Fylker_2023_PostGIS.zip",
-    "db:fylker:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Administrative_enheter_Fylker_2023_PostGIS.sql",
+    "db:counties2023": "npm run db:counties2023:download && npm run db:counties2023:import",
+    "db:counties2023:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Fylker2023/PostGIS/Basisdata_0000_Norge_25833_Fylker2023_PostGIS.zip",
+    "db:counties2023:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
     "db:municipalities": "npm run db:municipalities:download && npm run db:municipalities:import",
     "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Kommuner/POSTGIS/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.zip",
-    "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
-    "db:municipalities:heroku": "npm run db:municipalities:download && psql  < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql,"
+    "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.sql"
   },
   "repository": {
     "type": "git",
