--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
+    "start": "cd server && npm start",
     "prepare": "husky",
     "build": "vite build",
     "postinstall": "cd server && npm install",
